[gd_scene load_steps=5 format=3 uid="uid://bdjwhqute73cl"]

[ext_resource type="Script" path="res://Scripts/AdvancedCarMovement.gd" id="1_x8ve8"]
[ext_resource type="Texture2D" uid="uid://do8uwkxxo4l4w" path="res://Assets/Images/CarTemp.png" id="2_nn5y2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_s6jn1"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urpmo"]
size = Vector2(220, 97)

[node name="Playercar" type="Node2D"]

[node name="LaneOne" type="Node2D" parent="."]
visible = false
position = Vector2(0, 59)

[node name="Sprite2D" type="Sprite2D" parent="LaneOne"]
scale = Vector2(434.238, 134.284)
texture = SubResource("PlaceholderTexture2D_s6jn1")
centered = false

[node name="LaneTwo" type="Node2D" parent="."]
visible = false
position = Vector2(2, 232)

[node name="Sprite2D" type="Sprite2D" parent="LaneTwo"]
scale = Vector2(434.238, 134.284)
texture = SubResource("PlaceholderTexture2D_s6jn1")
centered = false

[node name="LaneThree" type="Node2D" parent="."]
visible = false
position = Vector2(0, 415)

[node name="Sprite2D" type="Sprite2D" parent="LaneThree"]
scale = Vector2(434.238, 134.284)
texture = SubResource("PlaceholderTexture2D_s6jn1")
centered = false

[node name="LaneFour" type="Node2D" parent="."]
visible = false
position = Vector2(1, 583)

[node name="Sprite2D" type="Sprite2D" parent="LaneFour"]
scale = Vector2(435.238, 134.284)
texture = SubResource("PlaceholderTexture2D_s6jn1")
centered = false

[node name="PlayerCar" type="CharacterBody2D" parent="."]
position = Vector2(110, 586)
script = ExtResource("1_x8ve8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCar"]
position = Vector2(1.00032, 1)
shape = SubResource("RectangleShape2D_urpmo")

[node name="Icon" type="Sprite2D" parent="PlayerCar"]
position = Vector2(1.00032, 1)
rotation = -0.261799
scale = Vector2(0.65, 0.65)
texture = ExtResource("2_nn5y2")
flip_h = true
